@@ -1,6 +1,8 @@
 6 August 2005 Sylvain Pion
 - Uncertain : add overload for enum_cast.
 - Interval_nt : add specializations for Equal_to, Greater.. returning Uncertain.
+- Uncertain : add opposite(), Same_uncertainty, Same_uncertainty_nt
+  ( tools to propagete uncertainty )
 
 5 August 2005 Sylvain Pion
 - Specialize functors Sgn, Compare, Is_zero... for Interval_nt so that they
